# NISTfit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  evaluators.py  setup.py  test_NISTfit-LM.py  test_NISTfit-evaluation.py  test_pybind11-evaluation.py  test_pybind11.py
examples/: fit_ancillary.cpp  simple.cpp
include/NISTfit/: abc.h  examples.h  numeric_evaluators.h  optimizers.h
scripts/: evaluators.py  runner.sh  test_NISTfit-LM.py  test_NISTfit-evaluation.py  time_NISTfit.py
src/: optimizers.cpp  pybind11_interface.cxx
